--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
 nav {
   background-color: #1a2456;
   margin: 20px;
-  border-radius: 20px;
+  border-radius: 10px;
   z-index: 1000;
 }
 
@@ -21,7 +21,6 @@ nav {
  .nav-link:focus, .nav-link.show {
    color: #ec997e !important;
  }
-
 
 img#logo{
   height: 68px;
@@ -67,11 +66,9 @@ section#hero {
   width: 100%;
   height: 100vh;
   padding-top: 20px;
-  position: absolute;
-  top: 0;
-  left: 0;
   align-items: center;
   justify-content: center;
+  margin-bottom: 10px;
 }
 
 .hero-text {
@@ -88,4 +85,20 @@ section#hero {
 .hero-text p {
   font-size: 30px;
   font-weight: 200;
+}
+
+#product-grid {
+  display: grid;
+  margin-top: 30px;
+  grid-template-columns: repeat(2, 2fr);
+  gap: 20px;
+  width: 100%;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
