--- a/style.css
+++ b/style.css
@@ -87,12 +87,17 @@ section#hero {
   font-weight: 200;
 }
 
-#product-grid {
+#product-grid .container div {
   display: grid;
   margin-top: 30px;
   grid-template-columns: repeat(2, 2fr);
   gap: 20px;
   width: 100%;
+}
+
+#product-grid img {
+  width: 100%;
+  height: 230px;
 }
 
 header {
@@ -101,4 +106,9 @@ header {
   left: 0;
   width: 100%;
   z-index: 1000;
+}
+
+.slide {
+  display: none;
+
 }
