--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ section#hero {
   font-weight: 200;
 }
 
-#product-grid .container {
+#product-grid-1 .container {
   display: grid;
   margin-top: 30px;
   grid-template-columns: repeat(2, 2fr);
@@ -95,7 +95,7 @@ section#hero {
   width: 100%;
 }
 
-#product-grid img {
+#product-grid-1 img, #product-grid-2 img {
   width: 100%;
   height: auto;
 }
@@ -126,4 +126,24 @@ header {
   background-repeat: no-repeat;
   width: 100%;
   height: 50vh;
+}
+
+footer {
+  background-color: #1a2456;
+  align-items: center;
+}
+
+footer .container{
+  display: flex;
+  color: #ec997e;
+  padding: 40px 0px;
+  justify-content: space-between;
+}
+
+#product-grid-2 .container {
+  display: grid;
+  margin-top: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  width: 100%;
 }
