--- a/style.css
+++ b/style.css
@@ -95,10 +95,17 @@ section#hero {
   width: 100%;
 }
 
-#product-grid-1 img, #product-grid-2 img {
+#product-grid-1 img {
   width: 100%;
   height: auto;
 }
+
+#product-grid-2 img {
+  height: 250px;
+  width: 100%;
+  object-fit: cover;
+}
+
 
 header {
   position: fixed;
@@ -125,7 +132,13 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 50vh;
+  height: 100vh;
+  background-position: center;
+}
+
+#shop-banner h1, #shop-banner p{
+  display: flex;
+  justify-content: center;
 }
 
 footer {
@@ -138,6 +151,7 @@ footer .container{
   color: #ec997e;
   padding: 40px 0px;
   justify-content: space-between;
+  gap: 40px;
 }
 
 #product-grid-2 .container {
@@ -146,4 +160,33 @@ footer .container{
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   width: 100%;
+  margin-bottom: 60px;
+}
+
+.footer-links {
+  text-decoration: none;
+  list-style-type: none;
+  padding-left: 0px;
+}
+
+.footer-title {
+  text-transform: uppercase;
+}
+
+.footer-form {
+  display: flex;
+  gap: 20px;
+}
+
+.footer-form input {
+  border: solid 1px #ec997e;
+  background-color: transparent;
+}
+
+.footer-form button {
+  border-radius: 20px;
+  background-color: #ec997e;
+  width: 100px;
+  padding: 5px;
+
 }
