--- a/style.css
+++ b/style.css
@@ -124,31 +124,38 @@ header {
 }
 
 .product-stock {
-  color: rgb(191, 191, 191);
+  color: rgb(163, 163, 163);
 }
 
 #shop-banner {
   background-image: url('/images/shop-banner.jpg');
-  background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100vh;
-  background-position: center;
+  height: 70vh;
+  background-position: center bottom;
+  background-size: cover;
+  margin: 60px 0px;
 }
 
 #shop-banner h1, #shop-banner p{
   display: flex;
   justify-content: center;
+  color: #1a2456;
+}
+
+#shop-banner div {
+  padding-top: 30px;
 }
 
 footer {
   background-color: #1a2456;
   align-items: center;
+  font-size: 14px;
 }
 
 footer .container{
   display: flex;
-  color: #ec997e;
+  color: #e8c4b6;
   padding: 40px 0px;
   justify-content: space-between;
   gap: 40px;
@@ -179,14 +186,59 @@ footer .container{
 }
 
 .footer-form input {
-  border: solid 1px #ec997e;
+  border: solid 1px #e8c4b6;
   background-color: transparent;
 }
 
 .footer-form button {
   border-radius: 20px;
-  background-color: #ec997e;
+  background-color: #e8c4b6;
   width: 100px;
   padding: 5px;
+  border: none;
+}
 
+.product-name {
+  color: #1a2456;
+  display: flex;
+  justify-content: space-between;
+}
+
+.product-name h3 {
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.product-name:hover {
+  color: black;
+}
+
+.product-listing:hover{
+  cursor: pointer;
+}
+
+.product-price:hover button {
+  visibility: visible;
+  opacity: 1;
+}
+
+.product-price:hover .price {
+  opacity: 0;
+}
+
+.product-price button {
+  border-radius: 20px;
+  background-color: #1a2456;
+  width: 100px;
+  padding: 5px;
+  border: none;
+  color:white;
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+}
+
+.product-price .price {
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
 }
